--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-foundation-five",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Yeoman generator for Zurb Foundation 5",
   "keywords": [
     "yeoman-generator",
@@ -21,7 +21,7 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.14.0"
+    "yeoman-generator": ">=0.16.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0-rc.1.1",
