--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-foundation-five",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Yeoman generator for Zurb Foundation 5",
   "keywords": [
     "yeoman-generator",
@@ -21,21 +21,21 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": ">=0.16.0"
+    "yeoman-generator": "~0.16.0",
+    "chalk": "~0.4.0",
+    "yosay": "^0.1.0"
   },
   "peerDependencies": {
-    "yo": ">=1.0.0-rc.1.1",
-    "generator-mocha": "~0.1.1",
+    "yo": ">=1.0.0",
     "bower": ">=1.0.0",
     "dalek-cli": ">=0.0.3",
     "dalekjs": ">=0.0.8"
   },
   "devDependencies": {
-    "mocha": ">=1.14.0"
+    "mocha": "*"
   },
   "engines": {
-    "node": ">=0.8.0",
-    "npm": ">=1.2.10"
+    "node": ">=0.10.0"
   },
   "licenses": [
     {
