--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "url": "git://github.com/bauschan/generator-foundation-five.git"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "grunt test"
   },
   "dependencies": {
     "yeoman-generator": "~0.16.0",
